# django-md-docs

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/md_docs/: __init__.py  apps.py  urls.py  views.py
src/md_docs/static/md_docs/css/: page.css
src/md_docs/templates/md_docs/: page.html
test-app/: manage.py
test-app/md-docs/: getting-started.md  index.md
test-app/md-docs/api/: endpoints.md  index.md
test-app/test_app/: __init__.py  settings.py  urls.py
tests/: __init__.py  conftest.py  settings.py  test_app_integration.py  test_views.py  urls.py
